--- a/configs/x86_64.config
+++ b/configs/x86_64.config
@@ -2,6 +2,7 @@
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
+CONFIG_TARGET_BOARD="x86"
 
 # Set Firmware Size
 CONFIG_TARGET_KERNEL_PARTSIZE=64
